# watch-skill

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  install.ps1  install.sh  pyproject.toml  t.xml
.claude-plugin/: marketplace.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  new_agent_support.yml
.github/workflows/: ci.yml  integration.yml  release.yml
adapters/agents-md/: AGENTS.md
adapters/claude-skill/: .mcp.json
benchmarks/cost/: README.md  RESULTS.md  run_cost_benchmark.py
benchmarks/perception/: README.md  RESULTS.md  make_fixtures.py
core/agentvision/: __init__.py  config.py  errors.py  jobs.py  report.py  watch.py
core/watch_skill/: __init__.py  config.py  errors.py  jobs.py
docs/: ARCHITECTURE.md  DECISIONS.md  README.md  ROADMAP.md  architecture.md  configuration.md  cost.md  getting-started.md  troubleshooting.md
docs/agents/: README.md  agent-zero.md  claude-code.md  claude-desktop.md  cline.md  codex-cli.md  cursor.md  frameworks.md  gemini-cli.md  github-copilot-cli.md  goose.md  hermes.md  kilocode.md  kimi-code.md  openclaw.md  opencode.md  openhands.md  pi.md  qodo.md  qwen-code.md  vscode.md  windsurf.md
docs/guides/: arabic-in-arabic-out.md  how-it-improves-itself.md  lessons-and-savings.md  the-loop.md  youtube-analysis.md
docs/packs/: README.md  agent-self-verification.md  browser-agent-verification.md  content-creators.md  learning-research.md  meetings-lectures.md  monitoring-ops.md  qa-bug-hunting.md
docs/tools/: README.md
examples/: README.md  golden_path.py
examples/01-watch-and-ask/: README.md  watch_and_ask.py
examples/02-focused-moment/: README.md  focused_moment.py
examples/03-cross-video-search/: README.md  cross_video_search.py
examples/04-ui-loop/: README.md  ui_loop.py
examples/05-multilingual-arabic/: README.md  ask_in_arabic.py  index_arabic.py
examples/06-agent-integration/: README.md  agent_integration.py
examples/07-lessons-and-stats/: README.md  lessons_and_stats.py
examples/08-loop-types/: README.md  game_broken.html  game_fixed.html  game_loop.py  monitor_loop.py  render_title_card.py  video_gen_loop.py
examples/09-framework-adapters/: README.md  _demo_clip.py  crewai_example.py  langchain_example.py  openai_agents_example.py
examples/10-structured-extraction/: README.md  extraction_demo.py
examples/11-batch-mode/: README.md  batch_demo.py
examples/12-library-memory/: README.md  library_demo.py
examples/13-self-improvement/: README.md  self_improvement_demo.py
examples/14-browser-verification/: README.md  browser_verification_demo.py  checkout_buggy.html  checkout_fixed.html
examples/15-private-offline-workflow/: README.md  offline_workflow.py
examples/16-shareable-viewer/: README.md  export_viewer.py
examples/loop_demo/: page_broken.html  page_fixed.html  run_demo.py
scripts/: golden_path.py  install.ps1  install.sh
src/watch_skill/: batch.py  config.py  report.py  viewer.py  watch.py
surfaces/: __init__.py
surfaces/api/: __init__.py  app.py
surfaces/cli/: __init__.py  main.py
surfaces/mcp_server/: server.py
templates/agent-adapter/: README.md  docs-skeleton.md  validate.py
tests/: conftest.py  test_acquire_chain.py  test_agent_docs.py  test_answer.py  test_api.py  test_arabic.py  test_batch.py  test_binaries.py  test_budget.py  test_cache.py  test_capture.py  test_clean.py  test_config.py  test_diarize.py  test_doctor.py  test_error_fix_audit.py  test_errors.py  test_i18n.py  test_index.py  test_jobs.py  test_lessons.py  test_loop.py  test_mcp_server.py  test_perceive.py  test_plugin_packaging.py  test_privacy.py  test_skills_library.py  test_sources.py  test_token_economy.py  test_transcribe.py  test_viewer.py  test_vision.py  test_watch_pipeline.py  test_ytdlp.py
tests/acquire/: test_acquire_chain.py  test_cache.py  test_sources.py  test_ytdlp.py
(+200 files in other folders)
