[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentvision"
version = "0.6.0"
description = "Give any agent a video input: watch, index, ask, and iterate on video via MCP, CLI, REST, and Python."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "oxbshw" }]
keywords = ["video", "agents", "mcp", "vision", "transcription", "ffmpeg", "yt-dlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "pydantic>=2.13,<3",
    "pydantic-settings>=2.14,<3",
    "typer>=0.26,<1",
    "rich>=15.0,<16",
    "httpx>=0.28,<1",
]

[project.optional-dependencies]
perceive = [
    "scenedetect>=0.7,<0.8",
    "opencv-python-headless>=5.0,<6",
    "imagehash>=4.3,<5",
    "Pillow>=12.3,<13",
]
ocr = ["rapidocr>=3.9,<4", "onnxruntime>=1.27,<2", "python-bidi>=0.6,<1"]
whisper = ["faster-whisper>=1.2,<2"]
index = ["fastembed>=0.8,<0.9", "numpy>=2.4,<3"]
mcp = ["fastmcp>=3.4,<4"]
api = ["fastapi>=0.139,<1", "uvicorn>=0.50,<1"]
loop = ["playwright>=1.61,<2"]
diarize = ["pyannote.audio>=4.0,<5"]
all = ["agentvision[perceive,ocr,whisper,index,mcp,api,loop]"]

[project.scripts]
agentvision = "surfaces.cli.main:app"

[project.urls]
Homepage = "https://github.com/oxbshw/agentvision"

[dependency-groups]
dev = ["pytest>=9.1,<10", "pytest-timeout>=2.4,<3", "ruff>=0.15,<0.16"]

[tool.hatch.build.targets.wheel]
packages = ["core/agentvision", "surfaces"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
timeout = 300
markers = [
    "network: hits the real network (excluded from CI's merge gate)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",  # long lines in docstrings/prompts are deliberate
    "B008",  # typer.Option in defaults is the typer idiom
]

[tool.uv]
package = true
